--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Md Nafiz Amin"
 title_separator          : "-"
 name                     : &name "Md Nafiz Amin"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://nafizamin.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
